Ajout de v0 plugin moodle

--- a/templates/view.mustache
+++ b/templates/view.mustache
@@ -26,7 +26,7 @@
                 Description
             </div>
             <div class="card-body">
-             {{description}}
+             {{{description}}}
             </div>
         </div>
        
@@ -34,7 +34,7 @@
     <div class="col-12 col-md-6 text-center">
         <div class="card border-primary">
             <div class="card-header">
-                Choose your viewer
+                {{choiceviewer}}
             </div>
             <div class="card-body">
                 <input class="btn mr-5 mt-3 btn-outline-primary" type="button" value="OHIF Web Viewer" onclick="location.href='{{urlViewer}}&viewer=OHIF'">
