update  in moodle url with 2 files

--- a/templates/view.mustache
+++ b/templates/view.mustache
@@ -37,8 +37,8 @@
                 {{choiceviewer}}
             </div>
             <div class="card-body">
-                <input class="btn mr-5 mt-3 btn-outline-primary" type="button" value="OHIF Web Viewer" onclick="location.href='{{urlViewer}}&viewer=OHIF'">
-                <input class="btn ml-5 mt-3 btn-outline-primary" type="button" value="Stone Web Viewer" onclick="location.href='{{urlViewer}}&viewer=Stone'">
+                <input class="btn mr-5 mt-3 btn-outline-primary" type="button" value="OHIF Web Viewer" onclick="location.href='{{urlViewerOhif}}'">
+                <input class="btn ml-5 mt-3 btn-outline-primary" type="button" value="Stone Web Viewer" onclick="location.href='{{urlViewerStone}}'">
             </div>
         </div>
     </div>
