fix problem CI moodle

--- a/templates/view.mustache
+++ b/templates/view.mustache
@@ -16,6 +16,8 @@
 
     @package     mod_dicomviewer
     @category    string
+    @template    templates/view
+    @license     GNU General Public License
 	@copyright   2021 | Stage DUT AS Informatique
 }}
 <h2>Viewer DICOM Image</h2>
