--- a/templates/viewerWeb.mustache
+++ b/templates/viewerWeb.mustache
@@ -16,9 +16,11 @@
 
     @package     mod_dicomviewer
     @category    string
+    @template    templates/viewerOhifandviewerStone
+    @license     GNU General Public License
 	@copyright   2021 | Stage DUT AS Informatique
 }}
 <h2>Viewer DICOM Image</h2>
 
 <h3 class="mt-5 text-center">{{name}}</h3>
-<iframe title="ViewerExemple" style="width: 100%; height: 800px;" src="{{urlViewer}}"></iframe>
+<iframe title="ViewerExemple" style="width: 100%; height: 800px;" {{nameAttribut}}="{{urlViewer}}"></iframe>
