--- a/templates/viewerWeb.mustache
+++ b/templates/viewerWeb.mustache
@@ -23,4 +23,4 @@
 <h2>Viewer DICOM Image</h2>
 
 <h3 class="mt-5 text-center">{{name}}</h3>
-<iframe title="ViewerExemple" style="width: 100%; height: 800px;" {{nameAttribut}}="{{urlViewer}}"></iframe>
+<iframe title="ViewerExemple" style="width: 100%; height: 800px;" src="{{urlViewer}}"></iframe>
