--- a/templates/view.mustache
+++ b/templates/view.mustache
@@ -20,6 +20,24 @@
     @license     GNU General Public License
 	@copyright   2021 | Stage DUT AS Informatique
 }}
+{{!
+    @template mod_dicomviewer/view_page
+    Template for the view page
+    Classes required for JS:
+    -
+    Data attributes required for JS:
+    -
+    Context variables required for this template:
+    * description
+    * urlViewer
+    Example context (json):
+    {
+      "description": "Description....",
+      "choiceviewer": "Choice your viewer",
+      "urlViewerOhif": "https://moodle.org/mod/dicomviewer/viewerOhif.php",
+      "urlViewerStone": "https://moodle.org/mod/dicomviewer/viewerStone.php"
+    }
+}}
 <h2>Viewer DICOM Image</h2>
 <div class="row mt-5">
     <div class="col-12 col-md-6 text-left">
