--- a/templates/view.mustache
+++ b/templates/view.mustache
@@ -29,7 +29,9 @@
     -
     Context variables required for this template:
     * description
-    * urlViewer
+    * choiceviewer
+    * urlViewerOhif
+    * urlViewerStone
     Example context (json):
     {
       "description": "Description....",
