update syntax php

--- a/templates/viewerWeb.mustache
+++ b/templates/viewerWeb.mustache
@@ -17,18 +17,22 @@
     @package     mod_dicomviewer
     @category    string
     @license     GNU General Public License
-	@copyright   2021 | Stage DUT AS Informatique
+	  @copyright   2021 | Stage DUT AS Informatique
 }}
 {{!
     @template mod_dicomviewer/viewer_page
-    Template for the view page
-    Classes required for JS:
-    -
-    Data attributes required for JS:
-    -
+    Template for the viewer web page
+
+    Classes required for JS:                                                                                                       
+    * none     
+
+    Data attributes required for JS:                                                                                              
+    * none
+
     Context variables required for this template:
     * name
     * urlViewer
+
     Example context (json):
     {
       "name": "Viewer Ohif",
