--- a/templates/view.mustache
+++ b/templates/view.mustache
@@ -16,22 +16,25 @@
 
     @package     mod_dicomviewer
     @category    string
-    @template    templates/view
     @license     GNU General Public License
 	@copyright   2021 | Stage DUT AS Informatique
 }}
 {{!
     @template mod_dicomviewer/view_page
     Template for the view page
-    Classes required for JS:
-    -
-    Data attributes required for JS:
-    -
+
+    Classes required for JS:                                                                                                        
+    * none     
+
+    Data attributes required for JS:                                                                                                
+    * none 
+
     Context variables required for this template:
     * description
     * choiceviewer
     * urlViewerOhif
     * urlViewerStone
+
     Example context (json):
     {
       "description": "Description....",
@@ -59,8 +62,8 @@
                 {{choiceviewer}}
             </div>
             <div class="card-body">
-                <input class="btn mr-5 mt-3 btn-outline-primary" type="button" value="OHIF Web Viewer" onclick="location.href='{{urlViewerOhif}}'">
-                <input class="btn ml-5 mt-3 btn-outline-primary" type="button" value="Stone Web Viewer" onclick="location.href='{{urlViewerStone}}'">
+                <a href="{{urlViewerOhif}}" class="btn mr-5 mt-3 btn-outline-primary">OHIF Web Viewer</a>
+                <a href="{{urlViewerStone}}" class="btn mr-5 mt-3 btn-outline-primary">Stone Web Viewer</a>
             </div>
         </div>
     </div>
