--- a/templates/viewerWeb.mustache
+++ b/templates/viewerWeb.mustache
@@ -36,7 +36,7 @@
     Example context (json):
     {
       "name": "Viewer Ohif",
-      "urlViewer": "./viewer-ohif/viewer/studyInstanceUID"
+      "urlViewer": "./viewer-ohif/viewer?StudyInstanceUIDs=studyInstanceUID"
     }
 }}
 <h2>Viewer DICOM Image</h2>
